@@ -1,70 +1,126 @@
 
-# This Makefile has been automatically generated by Spellcast.
-# See: https://www.npmjs.org/package/spellcast
 
-summon: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast summon
 
-dev-summon: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast dev-summon
+# User rules
 
-clean: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast clean
+# The first rule is the default rule, when invoking "make" without argument...
+# Build every buildable things
+all: install doc browser
 
-test: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast test
+# Just install things so it works, basicaly: it just performs a "npm install --production" ATM
+install: log/npm-install.log
 
-build: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast build
+# Just install things so it works, basicaly: it just performs a "npm install" ATM
+dev-install: log/npm-dev-install.log
 
-browser: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast browser
+# Build
+build: browser
 
-browser-test: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast browser-test
+# Build the browser lib
+browser: browser/async.js browser/async.min.js
 
-bdd: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast bdd
+# This run the JsHint & Mocha BDD test, display it to STDOUT & save it to log/mocha.log and log/jshint.log
+test: log/jshint.log log/mocha.log
 
-hint: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast hint
+# This run the JsHint, display it to STDOUT & save it to log/jshint.log
+lint: log/jshint.log
 
-publish: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast publish
+# This run the Mocha BDD test, display it to STDOUT & save it to log/mocha.log
+unit: log/mocha.log
 
-npm-install: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast npm-install
+# Performs the browser tests
+#browser-test:
 
-npm-dev-install: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast npm-dev-install
+# This build the doc and README.md
+doc: README.md
 
-npm-publish: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast npm-publish
+# This publish to NPM and push to Github, if we are on master branch only
+publish: check-if-commited browser README.md build-commit log/npm-publish.log log/github-push.log
 
-upgrade-version: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast upgrade-version
+# Clean temporary things, or things that can be automatically regenerated
+clean: clean-all
 
-check-master: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast check-master
 
-git-push: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast git-push
 
-bdd-spec.md: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast bdd-spec.md
+# Variables
 
-browser/async.js: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast browser/async.js
+MOCHA=./node_modules/.bin/mocha -c
+JSHINT=./node_modules/.bin/jshint --verbose
+BROWSERIFY=./node_modules/.bin/browserify
+UGLIFY=./node_modules/.bin/uglifyjs
 
-browser/async.min.js: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast browser/async.min.js
 
-README.md: ./node_modules/spellcast/bin/spellcast
-	./node_modules/spellcast/bin/spellcast README.md
 
-./node_modules/spellcast/bin/spellcast:
-	npm install spellcast
+# Files rules
 
-# Make every rules 'PHONY' rules, let Spellcast handle dependencies and everything else.
-.PHONY: summon dev-summon clean test build browser browser-test bdd hint publish npm-install npm-dev-install npm-publish upgrade-version check-master git-push bdd-spec.md browser/async.js browser/async.min.js README.md
+# Build the browser lib
+browser/async.js: lib/*.js
+	${BROWSERIFY} lib/browser.js -s async -o browser/async.js
+
+# Build the browser minified lib
+browser/async.min.js: browser/async.js
+	${UGLIFY} browser/async.js -o browser/async.min.js -m
+
+# JsHint STDOUT test
+log/jshint.log: log/npm-dev-install.log lib/*.js test/*.js
+	${JSHINT} lib/*.js test/*.js | tee log/jshint.log ; exit $${PIPESTATUS[0]}
+
+# Mocha BDD STDOUT test
+log/mocha.log: log/npm-dev-install.log lib/*.js test/*.js
+	${MOCHA} test/*.js -R spec | tee log/mocha.log ; exit $${PIPESTATUS[0]}
+
+# README
+README.md: documentation.md
+	cat documentation.md > README.md
+
+# Mocha Markdown BDD spec
+bdd-spec.md: log/npm-dev-install.log lib/*.js test/*.js
+	${MOCHA} test/*.js -R markdown > bdd-spec.md
+
+# Publish to NPM
+log/npm-publish.log: check-if-master-branch upgrade-package-version
+	npm publish | tee log/npm-publish.log ; exit $${PIPESTATUS[0]}
+
+# Push to Github/master
+log/github-push.log: check-if-master-branch lib/*.js test/*.js package.json
+	#'npm version patch' create the git tag by itself... 
+	#git tag v`cat package.json | grep version | sed -r 's/.*"([0-9.]*)".*/\1/'`
+	git push origin master --tags | tee log/github-push.log ; exit $${PIPESTATUS[0]}
+
+# NPM install
+log/npm-install.log: package.json
+	npm install --production | tee log/npm-install.log ; exit $${PIPESTATUS[0]}
+
+# NPM install for developpement usage
+log/npm-dev-install.log: package.json
+	npm install | tee log/npm-dev-install.log ; exit $${PIPESTATUS[0]}
+
+
+
+# PHONY rules
+
+.PHONY: clean-all check-if-master-branch check-if-commited build-commit upgrade-package-version
+
+# Delete files, mostly log and non-versioned files
+clean-all:
+	rm -rf log/*.log README.md bdd-spec.md node_modules
+
+# This will fail if we are not on master branch (grep exit 1 if nothing found)
+check-if-master-branch:
+	git branch | grep  "^* master$$"
+
+# This will fail if there are change not commited (grep exit 1 if nothing found)
+check-if-commited:
+	git status | grep  "^nothing to commit" || ( echo -ne "\x1b[31mYou should commit first!\x1b[0m\n" ; exit 1 )
+	
+# Commit an automatic build
+build-commit:
+	git commit -am "Build" || exit 0
+
+# Upgrade version in package.json
+upgrade-package-version:
+	npm version patch -m "Upgrade package.json version to %s"
+
+
+
 
