@@ -8,29 +8,14 @@
   },
   "dependencies": {
     "nextgen-events": "^0.5.13",
-    "tree-kit": "^0.5.19"
+    "tree-kit": "^0.5.20"
   },
   "devDependencies": {
-    "browserify": "^13.0.0",
+    "browserify": "^13.0.1",
     "expect.js": "^0.3.1",
     "jshint": "^2.9.2",
-    "mocha": "^2.4.5",
-    "testling": "^1.7.1",
+    "mocha": "^2.5.3",
     "uglify-js": "^2.6.2"
-  },
-  "testling": {
-    "harness": "mocha",
-    "files": "test/*.js",
-    "browsers": [
-      "ie/8..latest",
-      "chrome/35..latest",
-      "firefox/35..latest",
-      "safari/latest",
-      "opera/11.0..latest",
-      "iphone/6",
-      "ipad/6",
-      "android-browser/latest"
-    ]
   },
   "scripts": {
     "test": "mocha -R dot"
