@@ -2880,7 +2880,7 @@ describe( "Mixing async.Plan.prototype.retry() & async.Plan.prototype.timeout()"
 				var timeout , result ;
 				
 				stats.startCounter[ 1 ] ++ ;
-				timeout = 50 ;
+				timeout = 75 ;
 				
 				switch ( stats.startCounter[ 1 ] )
 				{
@@ -2906,7 +2906,7 @@ describe( "Mixing async.Plan.prototype.retry() & async.Plan.prototype.timeout()"
 			} ,
 			[ asyncJob , stats , 2 , 5 , {} , [ undefined , 'result' ] ]
 		] )
-		.timeout( 20 )
+		.timeout( 30 )
 		.retry( 5 )
 		.exec( function( error , results ) {
 			expect( error ).not.to.be.an( Error ) ;
@@ -3570,7 +3570,7 @@ describe( "'Maximum call stack size exceeded' prevention" , function() {
 	
 	it( "nice -20 (the new default) should call setImmediate() once every 19 recursive synchronous calls" , function( done ) {
 		
-		//this.timeout( 5000 ) ;
+		this.timeout( 3000 ) ;
 		
 		var i , array = [] ;
 		
